--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <h1>{{greet('Morning')}}</h1>
         <h4>{{ name }}</h4>
         <h4>{{ job }}</h4>
+        <h1>Vue Data Binding</h1>
+        <a v-bind:href="window">Click here</a>
     </div>
 
     <script src="./app.js"></script>
