--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div id="app">
-        <h1>{{greet('Morning')}}</h1>
-        <h4>{{ name }}</h4>
-        <h4>{{ job }}</h4>
-        <h1>Vue Data Binding</h1>
-        <a v-bind:href="window">Click here</a>
+      <!-- place the values here -->
+      <h1>{{greet('Morning')}}</h1>
+      <h4>{{ name }}</h4>
+      <h4>{{ job }}</h4>
+      <!-- binding href attributes in Vue -->
+      <h1>Vue Data Binding</h1>
+      <a v-bind:href="window">Click here</a>
+
+      <!-- binding html in vue -->
+      <h1>Binding HTML</h1>
+      <p v-html="windowTag"></p>
+
+      <!-- binding values to a input -->
+      <input type="text" v-bind:value="name" />
     </div>
 
     <script src="./app.js"></script>
-</body>
+  </body>
 </html>
