--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
       <h1>Events</h1>
       <button v-on:click="age++">Add</button>
       <button v-on:click="age--">Minise</button>
+      <button v-on:click="incrementAge(10)">Age Increment to 10</button>
+      <button v-on:click="decrementAge(10)">Age Decrement to 10</button>
+
+
       <h4>Age: {{age}}</h4>
 
 
